Fix sticky not overflow and cursor animations

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,8 +11,9 @@
     --accent-200: #346145;
     --accent-300: #FF8585;
     --accent-400: #E89D63;
-    --accent-500: #f1dc59;
+    --accent-500: #bc9508;
     --error: #ee6565;
+    --sticky-note-width: 300px;
 }
 
 * {
@@ -36,9 +37,11 @@ main {
     background-color: var(--bg-300);
     padding: 2%;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    /* grid-template-columns: repeat(3, 1fr); */
+    grid-template-columns: repeat(auto-fill, var(--sticky-note-width));
+    grid-gap: 4rem;
+    justify-content: center;
     /* Creates 3 equal-width columns */
-    gap: 35px 5px;
     /* Adjust the gap between sticky notes as needed */
     grid-auto-rows: min-content;
     /* Each row will adjust to the content height */
@@ -288,16 +291,35 @@ h1 {
 /* sticky-note component */
 
 .sticky-note {
-    max-width: 80%;
+    aspect-ratio: 1;
+    max-width: fit-content;
+    min-width: var(--sticky-note-width);
+    margin: 1rem;
     border: none;
-    padding: 2rem;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
-    color: #353535;
+    color: #1f1e1b;
     align-self: start;
-    justify-self: center;
     font-family: 'Indie Flower', cursive;
     position: relative;
+    overflow: hidden;
+    cursor: grab;
+}
+
+.sticky-note-text {
+    overflow-y: auto;
+    scrollbar-width: none;
+}
+
+.sticky-note-text::-webkit-scrollbar {
+    display: none;
+}
+
+.sticky-note-title-container {
+    width: 75%;
+    overflow-x: clip;
+    white-space: nowrap;
 }
 
 .sticky-note h1 {
@@ -315,8 +337,10 @@ h1 {
     font-size: 1.5rem;
     border-top: 2px solid;
     font-weight: 400;
-    padding: 2% 0 0 0;
+    padding: 3% 0 0 0;
 }
+
+.sticky-note p:hover {}
 
 .sticky-note div {
     display: flex;
@@ -328,13 +352,19 @@ h1 {
 
 .xlgIcon {
     position: absolute;
-    top: 2px;
-    right: 5px;
+    top: .75rem;
+    right: .75rem;
+    font-size: 1.5rem;
+    fill: var(--bg-200);
+    cursor: pointer;
+    /* stroke: red; */
 }
 
 .xlgIcon:hover {
-    stroke-width: 5px;
-    scale: 1.02;
+    stroke-width: 2;
+    /* fill: red; */
+    stroke: var(--error);
+    /* scale: 1.02; */
 }
 
 .green {
